fix reload 404 by the way change mode of serve -s -l

--- a/root-file/index.html
+++ b/root-file/index.html
@@ -10,11 +10,12 @@
     <script type="systemjs-importmap">
       {
         "imports": {
-          "product-list": "http://localhost:9001/js/app.js",
-          "product-detail": "http://localhost:9002/js/app.js",
-          "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/5.9.4/system/single-spa.min.js",
-          "vue": "https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js",
-          "vue-router": "https://cdn.jsdelivr.net/npm/vue-router@3.0.7/dist/vue-router.min.js"
+            "navbar": "http://localhost:9003/js/app.js",
+            "product-list": "http://localhost:9001/js/app.js",
+            "product-detail": "http://localhost:9002/js/app.js",
+            "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/5.9.4/system/single-spa.min.js",
+            "vue": "https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js",
+            "vue-router": "https://cdn.jsdelivr.net/npm/vue-router@3.0.7/dist/vue-router.min.js"
         }
       }
     </script>
@@ -41,16 +42,29 @@
                     Vue.use(VueRouter)
 
                     singleSpa.registerApplication(
-                        'product-list',
-                        () => System.import('product-list'),
+                        'navbar',
+                        () => System.import('navbar'),
                         location => true
-                    );
+                    )
 
                     singleSpa.registerApplication(
                         'product-detail',
                         () => System.import('product-detail'),
-                        location => location.pathname.startsWith('/detail')
+                        location => location.pathname.startsWith('/product-detail')
+                        
                     )
+
+                    singleSpa.registerApplication(
+                        'product-list',
+                        () => System.import('product-list'),
+                        location => location.pathname.startsWith('/product-list')
+                    )
+
+                    // singleSpa.registerApplication(
+                    //     'product-list',
+                    //     () => System.import('product-list'),
+                    //     location => location.pathname.startsWith('/product-list')
+                    // )
 
                     // singleSpa.registerApplication(
                     //     'app1',
