--- a/root-file/index.html
+++ b/root-file/index.html
@@ -16,6 +16,7 @@
             "product-detail": "http://localhost:9002/js/app.js",
             "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/5.9.4/system/single-spa.min.js",
             "vue": "https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js",
+            "vuex": "https://cdn.jsdelivr.net/npm/vuex/dist/vuex.min.js",
             "vue-router": "https://cdn.jsdelivr.net/npm/vue-router@3.0.7/dist/vue-router.min.js"
         }
       }
@@ -39,23 +40,50 @@
     </div>
     <script>
         (function () {
-            Promise.all([System.import('single-spa'), System.import('vue'), System.import('vue-router')]).then(function (modules) {
+            Promise.all([
+                System.import('single-spa'), 
+                System.import('vue'), 
+                System.import('vue-router'),
+                System.import('vuex')
+            ]).then(function (modules) {
                 var singleSpa = modules[0];
                 var Vue = modules[1];
                 var VueRouter = modules[2];
+                var VueX = modules[4];
 
-                Vue.use(VueRouter)
+                Vue.use(VueRouter, VueX);
+
+                const store = new VueX.Store({
+                    state: {
+                        count: 0
+                    },
+                    actions: {
+                        increment(context, payload) {
+                            context.commit('increment', payload)
+                        }
+                    }
+                })
 
                 singleSpa.registerApplication(
                     'product-detail',
                     () => System.import('product-detail'),
-                    location => location.pathname.startsWith('/')
+                    location => location.pathname.startsWith('/'),
+                    (appName, location) => {
+                        return {
+                            authToken: 'HOANGxc67f6as87f7s9d'
+                        }
+                    }   
                 )
 
                 singleSpa.registerApplication(
                     'product-list',
                     () => System.import('product-list'),
-                    location => location.pathname.startsWith('/')
+                    location => location.pathname.startsWith('/'),
+                    (appName, location) => {
+                        return {
+                            authToken: 'HOANGxc67f6as87f7s9d'
+                        }
+                    }   
                 )
                 singleSpa.start();
             })
