--- a/root-file/index.html
+++ b/root-file/index.html
@@ -65,7 +65,7 @@
                 singleSpa.registerApplication({
                     name: 'product-detail',
                     app: () => System.import('product-detail'),
-                    activeWhen: '/',
+                    activeWhen: '/123',
                     customProps: {
                         store
                     },
@@ -74,7 +74,7 @@
                 singleSpa.registerApplication({
                     name: 'product-relate',
                     app: () => System.import('product-relate'),
-                    activeWhen: '/',
+                    activeWhen: '/abc',
                     customProps: {
                         store,
                     } 
