add mfe-product-cart to lerna

--- a/root-file/index.html
+++ b/root-file/index.html
@@ -13,12 +13,14 @@
     <script type="systemjs-importmap">
 			{
 				"imports": {
-						"product-relate": "https://mfe-product-relate.surge.sh/js/app.js",
-						"product-detail": "https://mfe-product-detail.surge.sh/js/app.js",
+						"product-relate": "http://localhost:9001/js/app.js",
+						"product-detail": "http://localhost:9002/js/app.js",
+                        "product-cart": "http://localhost:9003/js/app.js",
 						"single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/5.9.4/system/single-spa.min.js",
 						"vue": "https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js",
 						"vuex": "https://cdn.jsdelivr.net/npm/vuex/dist/vuex.min.js",
-						"vue-router": "https://cdn.jsdelivr.net/npm/vue-router@3.0.7/dist/vue-router.min.js"
+						"vue-router": "https://cdn.jsdelivr.net/npm/vue-router@3.0.7/dist/vue-router.min.js",
+                        "moment": "https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"
 				}	
 			}
     </script>
@@ -35,8 +37,8 @@
 
 <body>
     <div id="main">
-        <div id="product-relate"></div>
-        <div id="product-detail"></div>
+        <product-relate id="product-relate"></product-relate>
+        <product-detail id="product-detail"></product-detail>
     </div>
     <script>
         (function () {
@@ -94,6 +96,16 @@
                         store,
                     } 
                 })
+
+                singleSpa.registerApplication({
+                    name: 'product-cart',
+                    app: () => System.import('product-cart'),
+                    activeWhen: '/',
+                    customProps: {
+                        store,
+                    }
+                })
+
                 singleSpa.start();
             })
         })()
