--- a/root-file/index.html
+++ b/root-file/index.html
@@ -7,15 +7,15 @@
     <title>Microfrontends Single Spa From Scratch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="importmap-type" content="systemjs-importmap">
-    <link rel="stylesheet" href="./globalStyle.css">
-		<script type="systemjs-importmap"
-		src="https://storage.googleapis.com/polyglot.microfrontends.app/importmap.json"></script>
+		<!-- <script type="systemjs-importmap"
+		src="https://storage.googleapis.com/polyglot.microfrontends.app/importmap.json"></script> -->
     <script type="systemjs-importmap">
 			{
 				"imports": {
 						"product-relate": "http://localhost:9001/js/app.js",
 						"product-detail": "http://localhost:9002/js/app.js",
                         "product-cart": "http://localhost:9003/js/app.js",
+                        "mfe-share-lib": "http://localhost:12000/mfe-share-lib.js",
 						"single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/5.9.4/system/single-spa.min.js",
 						"vue": "https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js",
 						"vuex": "https://cdn.jsdelivr.net/npm/vuex/dist/vuex.min.js",
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+    <script>System.import('mfe-share-lib')</script>
     <div id="main">
         <product-relate id="product-relate"></product-relate>
         <product-detail id="product-detail"></product-detail>
@@ -46,7 +47,7 @@
                 System.import('single-spa'), 
                 System.import('vue'), 
                 System.import('vue-router'),
-                System.import('vuex')
+                System.import('vuex'),
             ]).then(function (modules) {
                 var singleSpa = modules[0];
                 var Vue = modules[1];
@@ -87,6 +88,7 @@
                         store
                     },
                 })
+
 
                 singleSpa.registerApplication({
                     name: 'product-relate',
